# yakyak

./: .gitignore  AUTH.md  CALL_FLOW.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  test_api.sh
docs/: API.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ENCRYPTION.md
migrations/: 202511040002_add_sip_ha1.sql  20251104_01_create_users_table.sql  202511050003_create_call_records_table.sql  20251106_01_create_roles_table.sql  20251106_02_create_conference_tables.sql  20251106_03_create_voicemail_tables.sql  20251106_04_create_call_queue_tables.sql  20251106_05_create_tenant_tables.sql  20251106_06_create_sip_trunk_tables.sql
scripts/: generate_test_certs.sh
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/call/: mod.rs
src/application/registration/: mod.rs
src/application/session/: mod.rs
src/config/: mod.rs
src/domain/: api_auth.rs  billing.rs  call_announcer.rs  call_forwarding.rs  call_manager.rs  call_parking.rs  call_pickup.rs  call_quality.rs  call_queue.rs  call_queue_engine.rs  call_recording.rs  cdr.rs  conference.rs  conference_manager.rs  conference_recording.rs  dnd.rs  instant_messaging.rs  ip_blacklist.rs  mod.rs  music_on_hold.rs  mwi.rs  presence.rs  security.rs  sip_trunk.rs  tenant.rs  voicemail.rs  voicemail_ivr.rs  voicemail_service.rs
src/domain/audio/: manager.rs  mod.rs  player.rs  sequence.rs  wav.rs
src/domain/billing/: mod.rs
src/domain/call/: aggregate.rs  entity.rs  event.rs  (+4 more)
src/infrastructure/: mod.rs
src/interface/: mod.rs
tests/: cdr_api_test.rs  cdr_repository_test.rs  monitoring_api_test.rs
(+117 files in other folders)
